# trello-cli

./: .gitignore  README.md  USAGE.md  pyproject.toml
tests/: test_data.py  test_render_functions.py
trello_cli/: __main_.py  client.py  config.py  main.py  utils.py
