[tool.poetry]
name = "trello-cli"
version = "0.1.0"
description = "A simple CLI based application for working with Trello."
authors = ["Justin Wood <root@justinwood.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
